[package]
name = "http-client"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.tokio]
version = "1.18.2"
features = ["full"]

[dependencies.hyper]
version = "0.14.18"
features = ["full"]

[lib]
crate-type = ["cdylib"]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/bin/main.rs"
